--- a/api_gateway/requirements.txt
+++ b/api_gateway/requirements.txt
@@ -1,6 +1,6 @@
-# Shared packages (must be first!)
--e ../shared
--e ../crm_integrations
+# Shared packages (устанавливаются в Dockerfile отдельно)
+# -e ../shared
+# -e ../crm_integrations
 
 # FastAPI Stack
 fastapi>=0.128.0  # Latest version (Dec 2025)
