--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,61 @@
-# Google Gemini API
+##############################################################################
+# AI-Admin - Главный .env файл для Docker Compose
+#
+# ✅ Это ЕДИНСТВЕННЫЙ .env файл, который нужен для работы через Docker Compose
+# ✅ Все сервисы (AI Agent, API Gateway, Telegram Bot) читают переменные отсюда
+# ✅ Скопируйте этот файл в .env и заполните своими значениями
+#
+# Для локальной разработки БЕЗ Docker смотрите .env.example в подпапках сервисов
+##############################################################################
+
+# =============================================================================
+# Google Gemini API (ОБЯЗАТЕЛЬНО!)
+# =============================================================================
+# Получить ключ: https://ai.google.dev/
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# CRM Configuration
-CRM_TYPE=bitrix24
-CRM_API_KEY=your_crm_api_key
-CRM_BASE_URL=https://your-company.bitrix24.ru
+# =============================================================================
+# Telegram Bot Configuration (ОБЯЗАТЕЛЬНО!)
+# =============================================================================
+# Получить от @BotFather в Telegram
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_from_botfather
 
-# Secrets
-API_KEY_SECRET=your_secret_key
-WEBHOOK_SECRET=your_webhook_secret
+# Webhook токен для идентификации компании (должен совпадать с токеном в БД)
+# Для тестирования используйте: test-webhook-token-123
+WEBHOOK_TOKEN=test-webhook-token-123
+
+# =============================================================================
+# CRM Configuration (для dev-тестирования)
+# =============================================================================
+# В production эти настройки берутся из БД для каждой компании отдельно
+# Здесь указываются только для локального тестирования
+CRM_TYPE=bitrix24
+CRM_API_KEY=dummy_for_testing
+CRM_BASE_URL=https://test.bitrix24.ru
+
+# =============================================================================
+# Security Secrets
+# =============================================================================
+API_KEY_SECRET=change_me_in_production
+WEBHOOK_SECRET=change_me_in_production
+
+# =============================================================================
+# Logging
+# =============================================================================
+LOG_LEVEL=INFO
+
+# =============================================================================
+# Database (автоматически для Docker Compose, не меняйте)
+# =============================================================================
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=ai_admin
+POSTGRES_USER=ai_admin
+POSTGRES_PASSWORD=ai_admin_password
+
+# =============================================================================
+# Redis (автоматически для Docker Compose, не меняйте)
+# =============================================================================
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
