--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -11,5 +11,8 @@ structlog>=24.1.0
 # Environment
 python-dotenv>=1.0.0
 
+# Security / Encryption
+cryptography>=42.0.0
+
 # Testing
 pytest>=8.0.0
