--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,15 @@ CRM_BASE_URL=https://test.bitrix24.ru
 API_KEY_SECRET=change_me_in_production
 WEBHOOK_SECRET=change_me_in_production
 
+# Master key for encrypting CRM API keys in database
+# Generate with: python -c "from shared.utils.crypto import CryptoService; print(CryptoService.generate_master_key())"
+ENCRYPTION_MASTER_KEY=change_me_in_production_generate_new_key
+
+# =============================================================================
+# Rate Limiting
+# =============================================================================
+RATE_LIMIT_ENABLED=true
+
 # =============================================================================
 # Logging
 # =============================================================================
